# Traloxolcus-Claude

./: .env.example  .gitignore  AI_REVIEW_COMMENTS.md  ARCHITECTURE.md  DEPLOYMENT.md  LICENSE  PROTOCOL.md  QUICKSTART.md  README.md  TODO.md  docker-compose.yml  install.sh  pr1_issue_comments.json  pr2_issue_comments.json  pr3_comments.json  pr3_issue_comments.json  pyproject.toml  requirements.txt
.agent/rules/: accept.md
.github/: LOW_PRIORITY_EVALUATION.md  NEXT_PR_TODO.md
config/: config.yaml
processing-server/: Dockerfile  Dockerfile.cpu  README.md  pyproject.toml  requirements.txt
processing-server/config/: processing.example.yaml
processing-server/src/processing_server/: __init__.py  app.py  config.py
processing-server/src/processing_server/ingest/: __init__.py
processing-server/src/processing_server/ml/: __init__.py
processing-server/src/processing_server/push/: __init__.py
processing-server/src/processing_server/stitcher/: __init__.py
processing-server/src/processing_server/web/: __init__.py
processing-server/src/processing_server/web/static/css/: status.css
processing-server/src/processing_server/web/templates/: status.html
scripts/: analyze_prs.py  comments_report.md  filter_comments.py  pr_data.json
soccer-rig-server/: Dockerfile  README.md  app.py  requirements.txt
soccer-rig-server/config/: server.yaml
soccer-rig-server/docker/: entrypoint.sh  nginx.conf
soccer-rig-server/src/: admin.py  auth.py  demo_data.py  models.py  parent_portal.py
soccer-rig-server/src/integrations/: __init__.py  email.py  teamsnap.py
soccer-rig-server/src/services/: __init__.py  heatmap.py  social_export.py  statistics.py
soccer-rig-server/src/soccer_server/: __init__.py  app.py  config.py
soccer-rig-server/src/soccer_server/analytics/: __init__.py
soccer-rig-server/src/soccer_server/api/: __init__.py
soccer-rig-server/src/soccer_server/database/: __init__.py
soccer-rig-server/src/soccer_server/ml/: __init__.py
soccer-rig-server/src/soccer_server/query/: __init__.py
soccer-rig-server/src/soccer_server/stitcher/: __init__.py
soccer-rig-server/src/soccer_server/storage/: __init__.py
soccer-rig-server/web/static/: index.html  watch.html
soccer-rig-server/web/static/css/: style.css  viewer.css
soccer-rig-server/web/static/js/: app.js  viewer.js
src/soccer_rig/: __init__.py  app.py  config.py
src/soccer_rig/api/: __init__.py  routes.py  server.py
src/soccer_rig/audio/: __init__.py  feedback.py
src/soccer_rig/camera/: __init__.py  base.py  framing.py  preview.py  recorder.py  simulation.py
src/soccer_rig/coordinator/: __init__.py
src/soccer_rig/network/: __init__.py  manager.py
src/soccer_rig/offload/: __init__.py
src/soccer_rig/storage/: __init__.py  manager.py
src/soccer_rig/sync/: __init__.py  manager.py
src/soccer_rig/updater/: __init__.py  github_updater.py
src/soccer_rig/web/: __init__.py
systemd/: soccer-rig.service
web/static/: index.html  manifest.json
web/static/css/: style.css
web/static/js/: app.js
